syntax = "proto3";

package echo_proto;

message EchoReq {
    string msg = 1;
}

message EchoRes {
    string msg = 1;
}

service Echo {
    rpc echo (EchoReq) returns (stream EchoRes);
}
